--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        archivesBaseName = "Marvel Heroes"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "PUBLIC_KEY", apikeyProperties['PUBLIC_KEY']
