--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -293,7 +293,7 @@ exceptions:
       - 'Throwable'
     allowedExceptionNameRegex: '_|(ignore|expected).*'
   TooGenericExceptionThrown:
-    active: true
+    active: false
     exceptionNames:
       - 'Error'
       - 'Exception'
