--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -68,6 +68,7 @@ coroutines_ktx = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", 
 coroutines_core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 room_ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room_runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room_paging = { module = "androidx.room:room-paging", version.ref = "room" }
 room_compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 pagination_ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagination" }
 glide_dev = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
