--- a/.github/workflows/android_build_test.yml
+++ b/.github/workflows/android_build_test.yml
@@ -1,19 +1,34 @@
-name: Android Build & Test
+name: Build & Test
 
-on: pull_request
+on:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v1
+    permissions:
+      pull-requests: write
 
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
+          distribution: 'zulu'
           java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
 
       - name: Run Unit Tests
         run: ./gradlew test
@@ -27,6 +42,3 @@ jobs:
         with:
           sarif_file: build/reports/detekt/detekt.sarif
           category: lint
-
-      - name: Build Project
-        run: ./gradlew assemble
