--- a/.github/workflows/android_build_test.yml
+++ b/.github/workflows/android_build_test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
 
+      - name: enable gradlew run
+        run: chmod 755 gradlew
+        
       - name: Run Unit Tests
         run: ./gradlew test
 
