--- a/.github/workflows/android_build_test.yml
+++ b/.github/workflows/android_build_test.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew test
 
+      - name: Instrumented Tests
+        run: ./gradlew connectedCheck
+
       - name: Detekt Verification
         run: ./gradlew detektAll
 
