ci: Atualiza base_url

--- a/secrets.defaults.properties
+++ b/secrets.defaults.properties
@@ -1,4 +1,4 @@
-BASE_URL_API="https://urlapi.com.br"
+BASE_URL_API="https://gateway.marvel.com/v1/public/"
 PRIVATE_KEY="jksnfkjsdnfkdn4784737"
 PUBLIC_KEY="kfjkdfjkdfj598569"
 
