--- a/.github/workflows/android_build_test.yml
+++ b/.github/workflows/android_build_test.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Enable KVM
+        run: |
+            echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+            sudo udevadm control --reload-rules
+            sudo udevadm trigger --name-match=kvm
+
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v2
 
@@ -32,6 +38,12 @@ jobs:
 
       - name: Run Unit Tests
         run: ./gradlew test
+
+      - name: Run Instrumented Tests
+        uses: ReactiveCircus/android-emulator-runner@v2.30.1
+        with:
+          api-level: 34
+          script: ./gradlew connectedCheck
 
       - name: Detekt Verification
         run: ./gradlew detektAll
