--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,6 @@ firebase_bom = "32.1.1"
 junit = "4.13.2"
 mockk = "1.13.5"
 mockito_core = "4.2.0"
-mockito_kotlin = "2.2.0"
 androidx_junit = "1.1.5"
 androidx_core_testing = "2.2.0"
 androidx_espresso = "3.5.1"
@@ -37,6 +36,9 @@ mock_ok_http_test = "4.9.3"
 min_sdk = "21"
 target_sdk = "33"
 compile_sdk = "33"
+versionCode = "1"
+versionName = "1.0.0"
+testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
 [libraries]
 androidx_core = { module = "androidx.core:core-ktx", version.ref = "androidx_core" }
@@ -61,6 +63,7 @@ coroutines_ktx = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", 
 coroutines_core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 room_ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room_runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room_paging = { module = "androidx.room:room-paging", version.ref = "room" }
 room_compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 pagination_ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagination" }
 glide_dev = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
@@ -78,7 +81,6 @@ firebase_analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
 junit = { module = "junit:junit", version.ref = "junit" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockito_core = { module = "org.mockito:mockito-core", version.ref = "mockito_core" }
-mockito_kotlin = { module = "com.nhaarman.mockitokotlin2:mockito-kotlin", version.ref = "mockito_kotlin" }
 androidx_junit = { module = "androidx.test.ext:junit", version.ref = "androidx_junit" }
 androidx_core_testing = { module = "androidx.arch.core:core-testing", version.ref = "androidx_core_testing" }
 androidx_espresso_contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidx_espresso" }
@@ -92,7 +94,6 @@ koin_test_ktx = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 koin_test_junit = { module = "io.insert-koin:koin-test-junit4", version.ref = "koin" }
 
 [bundles]
-mockito = ["mockito_core", "mockito_kotlin"]
 coroutines = ["coroutines_ktx", "coroutines_core"]
 retrofit = ["retrofit_ktx", "retrofit_converter_gson"]
 ok_http = ["ok_http_squareup", "ok_http_interceptor"]
@@ -100,6 +101,16 @@ glide = ["glide_dev", "glide_compiler"]
 navigation = ["navigation_fragment", "navigation_ui"]
 androidx = ["androidx_core", "androidx_appcompat", "androidx_constraint_layout"]
 lifecycle = ["lifecycle_view_model", "lifecycle_live_data", "lifecycle_runtime"]
+unit_test = ["junit", "mockk", "mockito_core", "androidx_junit", "androidx_core_testing", "coroutines_test", "koin_test_ktx"]
+instrumented_test = ["koin_test_ktx",
+    "koin_test_junit",
+    "junit",
+    "androidx_core_testing",
+    "androidx_test_runner",
+    "androidx_espresso_contrib",
+    "androidx_espresso_core",
+    "androidx_test_orchestrator",
+    "ok_http_mock_test"]
 
 [plugins]
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
